--- a/.github/workflows/onPush.yaml
+++ b/.github/workflows/onPush.yaml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 4
-      - name: Print github_token
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run script
         run: |
-          echo "$GITHUB_TOKEN"
+          bash ./util/searchRankScript.bash
+      - name: push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
