--- a/.github/workflows/masonRegCI.yaml
+++ b/.github/workflows/masonRegCI.yaml
@@ -11,19 +11,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run checkTomlScript
         run: |
-					cd Bricks 
-					func() {
-							DIR=$1
-							if [[ $DIR != "." && $DIR != '..' ]]; then   
-									if ls $DIR/*.toml &>/dev/null
-									then
-											echo "Found toml for $DIR"
-									else
-											exit 1
-									fi
-							fi
-					}
+          sh ./checkTomls.bash
 
-
-					ls -f  | while read -r file; do func $file; done 
 
