--- a/.github/workflows/searchRankingCI.yaml
+++ b/.github/workflows/searchRankingCI.yaml
@@ -3,6 +3,8 @@ on: push
 
 jobs:
   run_script_on_merge:
+    name: Run search script
+    runs-on: ubuntu-latest
     steps:
       - name: Run script on PR merge
         if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
