--- a/.github/workflows/masonRegCI.yaml
+++ b/.github/workflows/masonRegCI.yaml
@@ -4,10 +4,26 @@ on:
     paths:
       - 'Bricks/**'
 jobs:
-  check_tomlfiles:
-    name: Check TOML Files
+  checks_for_package:
+    name: Check Package 
     runs-on: ubuntu-latest
     steps:
-      - name: Run check toml file script
-        uses: ./checkTomls.bash
+      - uses: actions/checkout@v2
+      - name: Run checkTomlScript
+        run: |
+					cd Bricks 
+					func() {
+							DIR=$1
+							if [[ $DIR != "." && $DIR != '..' ]]; then   
+									if ls $DIR/*.toml &>/dev/null
+									then
+											echo "Found toml for $DIR"
+									else
+											exit 1
+									fi
+							fi
+					}
+
+
+					ls -f  | while read -r file; do func $file; done 
 
