--- a/.github/workflows/masonRegCI.yaml
+++ b/.github/workflows/masonRegCI.yaml
@@ -12,5 +12,7 @@ jobs:
       - name: Run checkTomlScript
         run: |
           bash ./checkTomls.bash
-
+      - name: CI Check package
+        run: |
+          bash ./util/travisScript.bash
 
