--- a/.github/workflows/searchRankingCI.yaml
+++ b/.github/workflows/searchRankingCI.yaml
@@ -16,5 +16,8 @@ jobs:
           fetch-depth: 4
       - name: Run script on PR merge
         if: github.event.pull_request.merged == true
+        with:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
         run: |
           bash ./util/searchRankScript.bash
